# ChangeLog for dev-python/apptools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/ChangeLog,v 1.23 2013/05/14 09:57:05 idella4 Exp $

  14 May 2013; Ian Delaney <idella4@gentoo.org> -apptools-4.0.0.ebuild,
  -apptools-4.0.1.ebuild, -apptools-4.1.0.ebuild:
  drop old

  12 May 2013; Ian Delaney <idella4@gentoo.org> -apptools-3.4.1.ebuild:
  drop old 3. version

*apptools-4.2.0-r1 (16 Apr 2013)

  16 Apr 2013; Ian Delaney <idella4@gentoo.org> +apptools-4.2.0-r1.ebuild:
  migration -> distutils-r1

*apptools-4.2.0 (03 Apr 2013)

  03 Apr 2013; Patrick Lauer <patrick@gentoo.org> +apptools-4.2.0.ebuild:
  Bump

  06 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> apptools-4.1.0.ebuild:
  Keyword amd64-linux and x86-linux

*apptools-4.1.0 (09 Oct 2012)

  09 Oct 2012; Patrick Lauer <patrick@gentoo.org> +apptools-4.1.0.ebuild:
  Bump

  15 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> apptools-4.0.1.ebuild:
  Fix virtualmake invocation in src_test(), thanks to Arfrever for all the help.

  13 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org>
  +files/apptools_test.patch, apptools-4.0.1.ebuild:
  Disable test that use package installed in  wrt #429668 by Diego Elio Pettenò
  <flameeyes@gentoo.org>. Thanks to Ian Delaney <johneed@hotmail.com> for the
  patch

  05 Mar 2012; Justin Lecher <jlec@gentoo.org> apptools-3.4.1.ebuild,
  apptools-4.0.0.ebuild, apptools-4.0.1.ebuild:
  revert restriction of pypy

  05 Mar 2012; Justin Lecher <jlec@gentoo.org> apptools-3.4.1.ebuild,
  apptools-4.0.0.ebuild, apptools-4.0.1.ebuild:
  Restrict pypy ABI

*apptools-4.0.1 (17 Jan 2012)

  17 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> apptools-4.0.0.ebuild,
  +apptools-4.0.1.ebuild:
  Version bump

*apptools-4.0.0 (03 Aug 2011)

  03 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +apptools-4.0.0.ebuild:
  Version bump. Possible API break.

*apptools-3.4.1 (30 Jan 2011)
