@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup test
-DEPEND=dev-python/setuptools doc? ( dev-python/sphinx ) test? ( dev-python/configobj dev-python/numpy >=dev-python/traits-4 >=dev-python/pyface-4 media-fonts/font-cursor-misc media-fonts/font-misc-misc sci-visualization/mayavi ) =dev-lang/python-2* test? ( dev-python/nose ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
-DESCRIPTION=Enthought Tool Suite: Application tools
-EAPI=4
-HOMEPAGE=http://code.enthought.com/projects/app_tools/ http://pypi.python.org/pypi/apptools
-IUSE=doc examples test test test
-KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
-LICENSE=BSD
-RDEPEND=dev-python/configobj dev-python/numpy >=dev-python/traits-4 =dev-lang/python-2*
-SLOT=0
-SRC_URI=http://www.enthought.com/repo/ets/apptools-4.2.0.tar.gz
-_eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=85f2a6c27fe0fddcadfecfbe58481798
