@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/apptools
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/ChangeLog,v 1.23 2013/05/14 09:57:05 idella4 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/ChangeLog,v 1.24 2014/05/02 04:22:47 idella4 Exp $
+
+*apptools-4.2.1 (02 May 2014)
+
+  02 May 2014; Ian Delaney <idella4@gentoo.org> +apptools-4.2.1.ebuild,
+  -apptools-4.2.0.ebuild:
+  bump; rm old, update deps & test phase
 
   14 May 2013; Ian Delaney <idella4@gentoo.org> -apptools-4.0.0.ebuild,
   -apptools-4.0.1.ebuild, -apptools-4.1.0.ebuild:
